# decisionflow

./: Procfile  decisionflow.cabal
src/: DataDefs.hs  Interface.hs  Main.hs  WFGenerator.hs  WFGenerator.hs.bak
