name: decisionflow
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: C:\Users\agocorona\Documents\Dropbox\Haskell\devel\MFlow-0.0.4\LICENSE
copyright: Alberto Gómez Corona
maintainer: Alberto Gómez Corona agocorona@gmail.com
stability: experimental
bug-reports: agocorona@gmail.com
synopsis: votations
description: .
category: workflow, Web
author: Alberto Gómez Corona
data-dir: ""

executable decisionflow
    build-depends: MFlow -any, RefSerialize -any, TCache -any, directory -any,
                   Workflow -any, base -any, blaze-html -any, bytestring -any,
                   containers == 0.4.2.1, mtl -any, old-time -any, stm -any,
                   text -any, transformers -any, vector -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules:  WFGenerator Interface DataDefs

